@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- $Id$ -->
-<RootObject xmlns:pobj="http://dellroad-stuff.googlecode.com/ns/persistentObject">
-    <pobj:updates>
+<RootObject>
+    <pobj:updates xmlns:pobj="http://dellroad-stuff.googlecode.com/ns/persistentObject">
         <pobj:update>update0</pobj:update>
     </pobj:updates>
 </RootObject>
